# ComfyUI_Soze_Gemini

./: README.md  __init__.py  api_routes.py  env_utils.py  example.env  fix_indent.py  gemini_node.py  image_utils.py  pyproject.toml  task_prompt_manager.py
web/: gemini_extension.js
web/js/: gemini_node.js
